--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
     />
   </head>
   <body>
+    <div id="password-screen" class="password-screen" aria-label="Password required">
+      <div class="password-screen-inner">
+        <p class="password-screen-label">Password required</p>
+        <form id="password-form" class="password-form" autocomplete="off">
+          <input type="password" id="password-input" class="password-input" placeholder="Enter password" autocomplete="off" aria-label="Password" />
+          <button type="submit" class="password-submit">Enter</button>
+        </form>
+        <p id="password-error" class="password-error" aria-live="polite" hidden>Incorrect password</p>
+      </div>
+    </div>
     <div class="page">
       <div class="site-header">
         <div class="site-header-inner">
@@ -25,11 +35,16 @@
           </nav>
         </div>
       </div>
+      <p class="header-intro scroll-in">
+        Maj is a senior designer based in Brooklyn, NY. They specialize in
+        designing brand systems that translate seamlessly into digital
+        experiences. Detailed case studies are available upon request.
+      </p>
 
       <main class="page-main">
         <section id="projects" class="section projects-section">
           <div class="project-list">
-            <article class="project-row">
+            <article class="project-row scroll-in">
               <div class="project-header">
                 <div class="project-name">
                   <h3 class="project-title">Wordibly</h3>
@@ -65,7 +80,7 @@
               </div>
             </article>
 
-            <article class="project-row">
+            <article class="project-row scroll-in">
               <div class="project-header">
                 <div class="project-name">
                   <h3 class="project-title">Cotulla</h3>
@@ -96,7 +111,7 @@
               </div>
             </article>
 
-            <article class="project-row">
+            <article class="project-row scroll-in">
               <div class="project-header">
                 <div class="project-name">
                   <h3 class="project-title">Aviation.edu</h3>
@@ -127,7 +142,7 @@
               </div>
             </article>
 
-            <article class="project-row">
+            <article class="project-row scroll-in">
               <div class="project-header">
                 <div class="project-name">
                   <h3 class="project-title">Somatic Living</h3>
@@ -158,7 +173,7 @@
               </div>
             </article>
 
-            <article class="project-row">
+            <article class="project-row scroll-in">
               <div class="project-header">
                 <div class="project-name">
                   <h3 class="project-title">Fastly</h3>
@@ -189,7 +204,7 @@
               </div>
             </article>
 
-            <article class="project-row">
+            <article class="project-row scroll-in">
               <div class="project-header">
                 <div class="project-name">
                   <h3 class="project-title">Bloom</h3>
@@ -225,13 +240,48 @@
     </div>
     <script>
       (function () {
-        var scrollThreshold = 80;
-        function onScroll() {
-          document.body.classList.toggle("is-scrolled", window.scrollY > scrollThreshold);
+        var KEY = "mv_portfolio";
+        var PASS = "frog";
+        var screen = document.getElementById("password-screen");
+        var form = document.getElementById("password-form");
+        var input = document.getElementById("password-input");
+        var error = document.getElementById("password-error");
+        if (sessionStorage.getItem(KEY) === PASS) {
+          screen.classList.add("is-unlocked");
+          return;
         }
-        window.addEventListener("scroll", onScroll, { passive: true });
-        onScroll();
+        form.addEventListener("submit", function (e) {
+          e.preventDefault();
+          if (input.value === PASS) {
+            sessionStorage.setItem(KEY, PASS);
+            screen.classList.add("is-unlocked");
+            error.hidden = true;
+          } else {
+            error.hidden = false;
+            input.focus();
+          }
+        });
       })();
+
+(function () {
+          var scrollThreshold = 80;
+          function onScroll() {
+            document.body.classList.toggle("is-scrolled", window.scrollY > scrollThreshold);
+          }
+          window.addEventListener("scroll", onScroll, { passive: true });
+          onScroll();
+        })();
+      (function () {
+          function initScrollIn() {
+            var observer = new IntersectionObserver(function (entries) {
+              entries.forEach(function (entry) {
+                if (entry.isIntersecting) entry.target.classList.add("is-visible");
+              });
+            }, { rootMargin: "0px 0px -5% 0px", threshold: 0 });
+            document.querySelectorAll(".scroll-in").forEach(function (el) { observer.observe(el); });
+          }
+          setTimeout(initScrollIn, 140);
+        })();
 
       (function () {
         var ctx = null;
@@ -257,7 +307,7 @@
           tick(now);
           tick(now + 0.006);
         }
-        document.querySelectorAll(".nav a").forEach(function (link) {
+        document.querySelectorAll(".nav a, .brand").forEach(function (link) {
           link.addEventListener("mouseenter", playClick);
         });
       })();
