--- a/info.html
+++ b/info.html
@@ -15,6 +15,16 @@
     />
   </head>
   <body>
+    <div id="password-screen" class="password-screen" aria-label="Password required">
+      <div class="password-screen-inner">
+        <p class="password-screen-label">Password required</p>
+        <form id="password-form" class="password-form" autocomplete="off">
+          <input type="password" id="password-input" class="password-input" placeholder="Enter password" autocomplete="off" aria-label="Password" />
+          <button type="submit" class="password-submit">Enter</button>
+        </form>
+        <p id="password-error" class="password-error" aria-live="polite" hidden>Incorrect password</p>
+      </div>
+    </div>
     <div class="page">
       <div class="site-header">
         <div class="site-header-inner">
@@ -25,15 +35,14 @@
           </nav>
         </div>
       </div>
+      <p class="header-intro scroll-in">
+        Maj is a senior designer based in Brooklyn, NY. They specialize in
+        designing brand systems that translate seamlessly into digital
+        experiences. Detailed case studies are available upon request.
+      </p>
 
       <main class="page-main info-page">
-        <p class="info-intro">
-          Maj is a senior designer based in Brooklyn, NY. They specialize in
-          designing brand systems that translate seamlessly into digital
-          experiences. Detailed case studies are available upon request. 
-        </p>
-
-        <div class="info-row">
+        <div class="info-row scroll-in">
           <h2 class="info-row-heading">Contact</h2>
           <div class="info-row-content">
             <a href="mailto:maj.v.des@gmail.com" class="info-link">maj.v.des@gmail.com</a><br />
@@ -42,7 +51,7 @@
           </div>
         </div>
 
-        <div class="info-row">
+        <div class="info-row scroll-in">
           <h2 class="info-row-heading">Skills</h2>
           <p class="info-row-content">
             Brand Systems &amp; Guidelines / Logo / Typography / Workshop Facilitation /
@@ -53,7 +62,7 @@
           </p>
         </div>
 
-        <div class="info-row">
+        <div class="info-row scroll-in">
           <h2 class="info-row-heading">Software</h2>
           <p class="info-row-content">
             Adobe CC / After Effects / Figma Suite / Procreate / Clip Studio / Blender /
@@ -62,7 +71,7 @@
           </p>
         </div>
 
-        <div class="info-row">
+        <div class="info-row scroll-in">
           <h2 class="info-row-heading">Select Clients</h2>
           <p class="info-row-content">
             Rockefeller Center / Box / Quinn / Microsoft / Amazon / Fusion / Salesforce /
@@ -70,7 +79,7 @@
           </p>
         </div>
 
-        <div class="info-row">
+        <div class="info-row scroll-in">
           <h2 class="info-row-heading">Work Experience</h2>
           <div class="info-row-content info-jobs">
             <div class="info-job">
@@ -96,7 +105,7 @@
           </div>
         </div>
 
-        <div class="info-row">
+        <div class="info-row scroll-in">
           <h2 class="info-row-heading">Education</h2>
           <div class="info-row-content info-list">
             <p>Decorus Atelier / Fine Arts</p>
@@ -107,12 +116,47 @@
     </div>
     <script>
       (function () {
+        var KEY = "mv_portfolio";
+        var PASS = "frog";
+        var screen = document.getElementById("password-screen");
+        var form = document.getElementById("password-form");
+        var input = document.getElementById("password-input");
+        var error = document.getElementById("password-error");
+        if (sessionStorage.getItem(KEY) === PASS) {
+          screen.classList.add("is-unlocked");
+          return;
+        }
+        form.addEventListener("submit", function (e) {
+          e.preventDefault();
+          if (input.value === PASS) {
+            sessionStorage.setItem(KEY, PASS);
+            screen.classList.add("is-unlocked");
+            error.hidden = true;
+          } else {
+            error.hidden = false;
+            input.focus();
+          }
+        });
+      })();
+
+      (function () {
         var scrollThreshold = 80;
         function onScroll() {
           document.body.classList.toggle("is-scrolled", window.scrollY > scrollThreshold);
         }
         window.addEventListener("scroll", onScroll, { passive: true });
         onScroll();
+      })();
+      (function () {
+        function initScrollIn() {
+          var observer = new IntersectionObserver(function (entries) {
+            entries.forEach(function (entry) {
+              if (entry.isIntersecting) entry.target.classList.add("is-visible");
+            });
+          }, { rootMargin: "0px 0px -5% 0px", threshold: 0 });
+          document.querySelectorAll(".scroll-in").forEach(function (el) { observer.observe(el); });
+        }
+        setTimeout(initScrollIn, 140);
       })();
 
       (function () {
@@ -139,7 +183,7 @@
           tick(now);
           tick(now + 0.006);
         }
-        document.querySelectorAll(".nav a").forEach(function (link) {
+        document.querySelectorAll(".nav a, .brand").forEach(function (link) {
           link.addEventListener("mouseenter", playClick);
         });
       })();
