Case studies: wire Aviation.edu, Cotulla, Somatic Living assets; gallery drag/gap fixes; video play-in-view
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="project-details">
                   <div class="project-role">
                     <h4 class="project-detail-heading">Role</h4>
-                    <p class="project-detail-value">Brand &amp; Product Designer</p>
+                    <p class="project-detail-value">Senior Brand &amp; Product Designer</p>
                   </div>
                   <div class="project-contributions">
                     <h4 class="project-detail-heading">Contributions</h4>
@@ -88,7 +88,7 @@
                 <div class="project-details">
                   <div class="project-role">
                     <h4 class="project-detail-heading">Role</h4>
-                    <p class="project-detail-value">—</p>
+                    <p class="project-detail-value">Senior Brand &amp; Product Designer</p>
                   </div>
                   <div class="project-contributions">
                     <h4 class="project-detail-heading">Contributions</h4>
@@ -102,11 +102,11 @@
               </div>
               <div class="project-media" role="region" aria-label="Project images">
                 <div class="project-media-track">
-                  <img src="assets/case-study-placeholder.png" alt="" />
-                  <img src="assets/case-study-placeholder.png" alt="" />
-                  <img src="assets/case-study-placeholder.png" alt="" />
-                  <img src="assets/case-study-placeholder.png" alt="" />
-                  <img src="assets/case-study-placeholder.png" alt="" />
+                  <video src="assets/Cotulla/1_Logo.mp4" title="Cotulla logo" autoplay muted loop playsinline></video>
+                  <img src="assets/Cotulla/2_BrandAssets.png" alt="Cotulla brand assets" />
+                  <img src="assets/Cotulla/3_Website.png" alt="Cotulla website" />
+                  <img src="assets/Cotulla/4_Website.png" alt="Cotulla website" />
+                  <img src="assets/Cotulla/MM_BusinessCard_BC-G-03.png" alt="Cotulla business card" />
                 </div>
               </div>
             </article>
@@ -119,7 +119,7 @@
                 <div class="project-details">
                   <div class="project-role">
                     <h4 class="project-detail-heading">Role</h4>
-                    <p class="project-detail-value">—</p>
+                    <p class="project-detail-value">Senior Brand &amp; Product Designer</p>
                   </div>
                   <div class="project-contributions">
                     <h4 class="project-detail-heading">Contributions</h4>
@@ -133,11 +133,15 @@
               </div>
               <div class="project-media" role="region" aria-label="Project images">
                 <div class="project-media-track">
-                  <img src="assets/case-study-placeholder.png" alt="" />
-                  <img src="assets/case-study-placeholder.png" alt="" />
-                  <img src="assets/case-study-placeholder.png" alt="" />
-                  <img src="assets/case-study-placeholder.png" alt="" />
-                  <img src="assets/case-study-placeholder.png" alt="" />
+                  <img src="assets/Aviation.edu/1.png" alt="Aviation.edu" />
+                  <img src="assets/Aviation.edu/3.png" alt="Aviation.edu" />
+                  <img src="assets/Aviation.edu/5.png" alt="Aviation.edu" />
+                  <img src="assets/Aviation.edu/6.png" alt="Aviation.edu" />
+                  <img src="assets/Aviation.edu/Frame%202087325920.png" alt="Aviation.edu" />
+                  <img src="assets/Aviation.edu/Frame%202087325924.png" alt="Aviation.edu" />
+                  <img src="assets/Aviation.edu/IMG%20BLOCK.png" alt="Aviation.edu" />
+                  <video src="assets/Aviation.edu/E_20.mp4" title="Aviation.edu" autoplay muted loop playsinline></video>
+                  <video src="assets/Aviation.edu/AviationEdu.mp4" title="Aviation.edu" autoplay muted loop playsinline></video>
                 </div>
               </div>
             </article>
@@ -150,7 +154,7 @@
                 <div class="project-details">
                   <div class="project-role">
                     <h4 class="project-detail-heading">Role</h4>
-                    <p class="project-detail-value">—</p>
+                    <p class="project-detail-value">Senior Brand &amp; Product Designer</p>
                   </div>
                   <div class="project-contributions">
                     <h4 class="project-detail-heading">Contributions</h4>
@@ -164,11 +168,12 @@
               </div>
               <div class="project-media" role="region" aria-label="Project images">
                 <div class="project-media-track">
-                  <img src="assets/case-study-placeholder.png" alt="" />
-                  <img src="assets/case-study-placeholder.png" alt="" />
-                  <img src="assets/case-study-placeholder.png" alt="" />
-                  <img src="assets/case-study-placeholder.png" alt="" />
-                  <img src="assets/case-study-placeholder.png" alt="" />
+                  <img src="assets/Somatic%20Living/1.png" alt="Somatic Living" />
+                  <img src="assets/Somatic%20Living/2.png" alt="Somatic Living" />
+                  <img src="assets/Somatic%20Living/5.png" alt="Somatic Living" />
+                  <img src="assets/Somatic%20Living/8.png" alt="Somatic Living" />
+                  <video src="assets/Somatic%20Living/6.mp4" title="Somatic Living" autoplay muted loop playsinline></video>
+                  <video src="assets/Somatic%20Living/7.mp4" title="Somatic Living" autoplay muted loop playsinline></video>
                 </div>
               </div>
             </article>
@@ -181,7 +186,7 @@
                 <div class="project-details">
                   <div class="project-role">
                     <h4 class="project-detail-heading">Role</h4>
-                    <p class="project-detail-value">—</p>
+                    <p class="project-detail-value">Senior Brand &amp; Product Designer</p>
                   </div>
                   <div class="project-contributions">
                     <h4 class="project-detail-heading">Contributions</h4>
@@ -212,7 +217,7 @@
                 <div class="project-details">
                   <div class="project-role">
                     <h4 class="project-detail-heading">Role</h4>
-                    <p class="project-detail-value">—</p>
+                    <p class="project-detail-value">Senior Brand &amp; Product Designer</p>
                   </div>
                   <div class="project-contributions">
                     <h4 class="project-detail-heading">Contributions</h4>
@@ -312,6 +317,22 @@
         });
       })();
 
+      (function () {
+          var videoObserver = new IntersectionObserver(function (entries) {
+            entries.forEach(function (entry) {
+              var v = entry.target;
+              if (entry.isIntersecting) {
+                v.play().catch(function () {});
+              } else {
+                v.pause();
+              }
+            });
+          }, { threshold: 0.25 });
+          document.querySelectorAll(".project-media-track video").forEach(function (v) {
+            v.muted = true;
+            videoObserver.observe(v);
+          });
+        })();
       (function () {
         function dragScroll(el) {
           var startX, startScrollLeft, isDown = false;
