Add mailto link to 'upon request' (maj.v.des@gmail.com)
Made-with: Cursor

--- a/info.html
+++ b/info.html
@@ -38,7 +38,8 @@
       <p class="header-intro scroll-in">
         Maj is a senior designer based in Brooklyn, NY. They specialize in
         designing brand systems that translate seamlessly into digital
-        experiences. Detailed case studies are available upon request.
+        experiences. This site is currently under construction. 
+        Detailed case studies are available <a href="mailto:maj.v.des@gmail.com" class="header-intro-link">upon request</a>.
       </p>
 
       <main class="page-main info-page">
