Add Cursor to Software list on Info page
Made-with: Cursor

--- a/info.html
+++ b/info.html
@@ -66,7 +66,7 @@
         <div class="info-row scroll-in">
           <h2 class="info-row-heading">Software</h2>
           <p class="info-row-content">
-            Adobe CC / After Effects / Figma Suite / Procreate / Clip Studio / Blender /
+            Adobe CC / After Effects / Figma Suite / Cursor / Procreate / Clip Studio / Blender /
             C4D / Jitter / Claude / Midjourney / ChatGPT / Lovable / Notion / Microsoft
             Office / G-Suite
           </p>
