Case studies: wire new Wordibly, Cotulla, Somatic Living, Fastly, Bloom assets; remove old placeholders
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -66,16 +66,20 @@
               </div>
               <div class="project-media" role="region" aria-label="Project images">
                 <div class="project-media-track">
-                  <img src="assets/wordibly/Contact.png" alt="Wordibly contact" />
-                  <img src="assets/wordibly/Frame%206.png" alt="Wordibly frame" />
-                  <img src="assets/wordibly/Frame%209.png" alt="Wordibly frame" />
-                  <img src="assets/wordibly/Frame%2010.png" alt="Wordibly frame" />
-                  <img src="assets/wordibly/Frame%2010512.png" alt="Wordibly frame" />
-                  <img src="assets/wordibly/Frame%202087325927.png" alt="Wordibly frame" />
-                  <img src="assets/wordibly/Frame%202087325973.png" alt="Wordibly frame" />
-                  <img src="assets/wordibly/Slide%2016_9%20-%2019.png" alt="Wordibly slide" />
-                  <img src="assets/wordibly/Slide%2016_9%20-%2021.png" alt="Wordibly slide" />
-                  <img src="assets/wordibly/Slide%2016_9%20-%2022.png" alt="Wordibly slide" />
+                  <img src="assets/Wordibly/1_Brand%20Asset.png" alt="Wordibly brand" />
+                  <img src="assets/Wordibly/2_Brand%20Asset.png" alt="Wordibly brand" />
+                  <img src="assets/Wordibly/3_Brand%20Asset.png" alt="Wordibly brand" />
+                  <img src="assets/Wordibly/4_Brand%20Asset.png" alt="Wordibly brand" />
+                  <img src="assets/Wordibly/5_Brand%20Asset.png" alt="Wordibly brand" />
+                  <img src="assets/Wordibly/Web.png" alt="Wordibly web" />
+                  <img src="assets/Wordibly/Web-1.png" alt="Wordibly web" />
+                  <img src="assets/Wordibly/Web-2.png" alt="Wordibly web" />
+                  <img src="assets/Wordibly/Web-3.png" alt="Wordibly web" />
+                  <img src="assets/Wordibly/Web-4.png" alt="Wordibly web" />
+                  <img src="assets/Wordibly/Web-5.png" alt="Wordibly web" />
+                  <img src="assets/Wordibly/Web-6.png" alt="Wordibly web" />
+                  <img src="assets/Wordibly/Web-7.png" alt="Wordibly web" />
+                  <img src="assets/Wordibly/Product.png" alt="Wordibly product" />
                 </div>
               </div>
             </article>
@@ -104,9 +108,10 @@
                 <div class="project-media-track">
                   <video src="assets/Cotulla/1_Logo.mp4" title="Cotulla logo" autoplay muted loop playsinline></video>
                   <img src="assets/Cotulla/2_BrandAssets.png" alt="Cotulla brand assets" />
-                  <img src="assets/Cotulla/3_Website.png" alt="Cotulla website" />
-                  <img src="assets/Cotulla/4_Website.png" alt="Cotulla website" />
-                  <img src="assets/Cotulla/MM_BusinessCard_BC-G-03.png" alt="Cotulla business card" />
+                  <img src="assets/Cotulla/3_BrandAssets.png" alt="Cotulla brand" />
+                  <img src="assets/Cotulla/4_BrandAssets.png" alt="Cotulla brand" />
+                  <img src="assets/Cotulla/5_Website.png" alt="Cotulla website" />
+                  <img src="assets/Cotulla/6_Website.png" alt="Cotulla website" />
                 </div>
               </div>
             </article>
@@ -170,10 +175,11 @@
                 <div class="project-media-track">
                   <img src="assets/Somatic%20Living/1.png" alt="Somatic Living" />
                   <img src="assets/Somatic%20Living/2.png" alt="Somatic Living" />
+                  <img src="assets/Somatic%20Living/3.png" alt="Somatic Living" />
+                  <video src="assets/Somatic%20Living/4.mp4" title="Somatic Living" autoplay muted loop playsinline></video>
                   <img src="assets/Somatic%20Living/5.png" alt="Somatic Living" />
-                  <img src="assets/Somatic%20Living/8.png" alt="Somatic Living" />
-                  <video src="assets/Somatic%20Living/6.mp4" title="Somatic Living" autoplay muted loop playsinline></video>
                   <video src="assets/Somatic%20Living/7.mp4" title="Somatic Living" autoplay muted loop playsinline></video>
+                  <img src="assets/Somatic%20Living/8.png" alt="Somatic Living" />
                 </div>
               </div>
             </article>
@@ -200,11 +206,17 @@
               </div>
               <div class="project-media" role="region" aria-label="Project images">
                 <div class="project-media-track">
-                  <img src="assets/case-study-placeholder.png" alt="" />
-                  <img src="assets/case-study-placeholder.png" alt="" />
-                  <img src="assets/case-study-placeholder.png" alt="" />
-                  <img src="assets/case-study-placeholder.png" alt="" />
-                  <img src="assets/case-study-placeholder.png" alt="" />
+                  <img src="assets/Fastly/Cover.png" alt="Fastly" />
+                  <img src="assets/Fastly/Slide%2016_9%20-%2029.png" alt="Fastly" />
+                  <img src="assets/Fastly/Slide%2016_9%20-%2030.png" alt="Fastly" />
+                  <img src="assets/Fastly/Slide%2016_9%20-%2033.png" alt="Fastly" />
+                  <img src="assets/Fastly/Slide%2016_9%20-%2034.png" alt="Fastly" />
+                  <img src="assets/Fastly/Slide%2016_9%20-%2036.png" alt="Fastly" />
+                  <img src="assets/Fastly/Slide%2016_9%20-%2037.png" alt="Fastly" />
+                  <img src="assets/Fastly/Slide%2016_9%20-%2038.png" alt="Fastly" />
+                  <img src="assets/Fastly/Slide%2016_9%20-%2039.png" alt="Fastly" />
+                  <img src="assets/Fastly/Slide%2016_9%20-%2040.png" alt="Fastly" />
+                  <img src="assets/Fastly/Slide%2016_9%20-%2041.png" alt="Fastly" />
                 </div>
               </div>
             </article>
@@ -231,11 +243,18 @@
               </div>
               <div class="project-media" role="region" aria-label="Project images">
                 <div class="project-media-track">
-                  <img src="assets/case-study-placeholder.png" alt="" />
-                  <img src="assets/case-study-placeholder.png" alt="" />
-                  <img src="assets/case-study-placeholder.png" alt="" />
-                  <img src="assets/case-study-placeholder.png" alt="" />
-                  <img src="assets/case-study-placeholder.png" alt="" />
+                  <img src="assets/Bloom/2-1_Bloom_Onboarding.png" alt="Bloom" />
+                  <img src="assets/Bloom/2-2_Bloom_Onboarding2.png" alt="Bloom" />
+                  <img src="assets/Bloom/2-3_Bloom_Onboarding2.png" alt="Bloom" />
+                  <img src="assets/Bloom/3_BloomLogo.png" alt="Bloom" />
+                  <img src="assets/Bloom/4_Bloom_Application.png" alt="Bloom" />
+                  <img src="assets/Bloom/5-1_App%20icon.png" alt="Bloom" />
+                  <img src="assets/Bloom/5-1_Bloom_StyleApplication.png" alt="Bloom" />
+                  <img src="assets/Bloom/6-1_Bloom_Colors.png" alt="Bloom" />
+                  <img src="assets/Bloom/6-2_Bloom_Type.png" alt="Bloom" />
+                  <img src="assets/Bloom/6-Bloom_3D.png" alt="Bloom" />
+                  <img src="assets/Bloom/7-Bloom_Application.png" alt="Bloom" />
+                  <img src="assets/Bloom/7-3_Bloom_IllustrationSmiley.png" alt="Bloom" />
                 </div>
               </div>
             </article>
