Update Fastly and Bloom case study assets to new numbered files; add Bloom 1.mov
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -206,17 +206,17 @@
               </div>
               <div class="project-media" role="region" aria-label="Project images">
                 <div class="project-media-track">
-                  <img src="assets/Fastly/Cover.png" alt="Fastly" />
-                  <img src="assets/Fastly/Slide%2016_9%20-%2029.png" alt="Fastly" />
-                  <img src="assets/Fastly/Slide%2016_9%20-%2030.png" alt="Fastly" />
-                  <img src="assets/Fastly/Slide%2016_9%20-%2033.png" alt="Fastly" />
-                  <img src="assets/Fastly/Slide%2016_9%20-%2034.png" alt="Fastly" />
-                  <img src="assets/Fastly/Slide%2016_9%20-%2036.png" alt="Fastly" />
-                  <img src="assets/Fastly/Slide%2016_9%20-%2037.png" alt="Fastly" />
-                  <img src="assets/Fastly/Slide%2016_9%20-%2038.png" alt="Fastly" />
-                  <img src="assets/Fastly/Slide%2016_9%20-%2039.png" alt="Fastly" />
-                  <img src="assets/Fastly/Slide%2016_9%20-%2040.png" alt="Fastly" />
-                  <img src="assets/Fastly/Slide%2016_9%20-%2041.png" alt="Fastly" />
+                  <img src="assets/Fastly/1.png" alt="Fastly" />
+                  <img src="assets/Fastly/2.png" alt="Fastly" />
+                  <img src="assets/Fastly/3.png" alt="Fastly" />
+                  <img src="assets/Fastly/4.png" alt="Fastly" />
+                  <img src="assets/Fastly/5.png" alt="Fastly" />
+                  <img src="assets/Fastly/5.5.png" alt="Fastly" />
+                  <img src="assets/Fastly/6.png" alt="Fastly" />
+                  <img src="assets/Fastly/7.png" alt="Fastly" />
+                  <img src="assets/Fastly/8.png" alt="Fastly" />
+                  <img src="assets/Fastly/9.png" alt="Fastly" />
+                  <img src="assets/Fastly/10.png" alt="Fastly" />
                 </div>
               </div>
             </article>
@@ -243,18 +243,19 @@
               </div>
               <div class="project-media" role="region" aria-label="Project images">
                 <div class="project-media-track">
-                  <img src="assets/Bloom/2-1_Bloom_Onboarding.png" alt="Bloom" />
-                  <img src="assets/Bloom/2-2_Bloom_Onboarding2.png" alt="Bloom" />
-                  <img src="assets/Bloom/2-3_Bloom_Onboarding2.png" alt="Bloom" />
-                  <img src="assets/Bloom/3_BloomLogo.png" alt="Bloom" />
+                  <img src="assets/Bloom/1.1.png" alt="Bloom" />
+                  <img src="assets/Bloom/2.png" alt="Bloom" />
+                  <img src="assets/Bloom/3.png" alt="Bloom" />
+                  <img src="assets/Bloom/4.png" alt="Bloom" />
                   <img src="assets/Bloom/4_Bloom_Application.png" alt="Bloom" />
-                  <img src="assets/Bloom/5-1_App%20icon.png" alt="Bloom" />
-                  <img src="assets/Bloom/5-1_Bloom_StyleApplication.png" alt="Bloom" />
-                  <img src="assets/Bloom/6-1_Bloom_Colors.png" alt="Bloom" />
-                  <img src="assets/Bloom/6-2_Bloom_Type.png" alt="Bloom" />
+                  <video src="assets/Bloom/1.mov" title="Bloom" autoplay muted loop playsinline></video>
                   <img src="assets/Bloom/6-Bloom_3D.png" alt="Bloom" />
-                  <img src="assets/Bloom/7-Bloom_Application.png" alt="Bloom" />
-                  <img src="assets/Bloom/7-3_Bloom_IllustrationSmiley.png" alt="Bloom" />
+                  <img src="assets/Bloom/7.png" alt="Bloom" />
+                  <img src="assets/Bloom/8.png" alt="Bloom" />
+                  <img src="assets/Bloom/9.png" alt="Bloom" />
+                  <img src="assets/Bloom/10.png" alt="Bloom" />
+                  <img src="assets/Bloom/11.png" alt="Bloom" />
+                  <img src="assets/Bloom/12.png" alt="Bloom" />
                 </div>
               </div>
             </article>
