Fix Work link (use ./index.html), add serve/Netlify/Vercel config, image optimize script
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Maj Vestal – Portfolio</title>
     <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='.9em' font-size='90'%3E%E2%9A%94%EF%B8%8F%3C/text%3E%3C/svg%3E" />
     <link rel="stylesheet" href="./styles.css" />
+    <link rel="preload" href="assets/Wordibly/1_Brand%20Asset.png" as="image" />
     <link rel="stylesheet" href="https://use.typekit.net/cyu8ase.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -28,9 +29,9 @@
     <div class="page">
       <div class="site-header">
         <div class="site-header-inner">
-          <a href="index.html" class="brand brand-wordmark">Maj Vestal</a>
+          <a href="./index.html" class="brand brand-wordmark">Maj Vestal</a>
           <nav class="nav">
-            <a class="nav-link nav-active" href="index.html">Work</a>
+            <a class="nav-link nav-active" href="./index.html">Work</a>
             <a class="nav-link" href="info.html">Info</a>
           </nav>
         </div>
@@ -66,20 +67,20 @@
               </div>
               <div class="project-media" role="region" aria-label="Project images">
                 <div class="project-media-track">
-                  <img src="assets/Wordibly/1_Brand%20Asset.png" alt="Wordibly brand" />
-                  <img src="assets/Wordibly/2_Brand%20Asset.png" alt="Wordibly brand" />
-                  <img src="assets/Wordibly/3_Brand%20Asset.png" alt="Wordibly brand" />
-                  <img src="assets/Wordibly/4_Brand%20Asset.png" alt="Wordibly brand" />
-                  <img src="assets/Wordibly/5_Brand%20Asset.png" alt="Wordibly brand" />
-                  <img src="assets/Wordibly/Web.png" alt="Wordibly web" />
-                  <img src="assets/Wordibly/Web-1.png" alt="Wordibly web" />
-                  <img src="assets/Wordibly/Web-2.png" alt="Wordibly web" />
-                  <img src="assets/Wordibly/Web-3.png" alt="Wordibly web" />
-                  <img src="assets/Wordibly/Web-4.png" alt="Wordibly web" />
-                  <img src="assets/Wordibly/Web-5.png" alt="Wordibly web" />
-                  <img src="assets/Wordibly/Web-6.png" alt="Wordibly web" />
-                  <img src="assets/Wordibly/Web-7.png" alt="Wordibly web" />
-                  <img src="assets/Wordibly/Product.png" alt="Wordibly product" />
+                  <img src="assets/Wordibly/1_Brand%20Asset.png" alt="Wordibly brand" decoding="async" fetchpriority="high" />
+                  <img src="assets/Wordibly/2_Brand%20Asset.png" alt="Wordibly brand" loading="lazy" decoding="async" />
+                  <img src="assets/Wordibly/3_Brand%20Asset.png" alt="Wordibly brand" loading="lazy" decoding="async" />
+                  <img src="assets/Wordibly/4_Brand%20Asset.png" alt="Wordibly brand" loading="lazy" decoding="async" />
+                  <img src="assets/Wordibly/5_Brand%20Asset.png" alt="Wordibly brand" loading="lazy" decoding="async" />
+                  <img src="assets/Wordibly/Web.png" alt="Wordibly web" loading="lazy" decoding="async" />
+                  <img src="assets/Wordibly/Web-1.png" alt="Wordibly web" loading="lazy" decoding="async" />
+                  <img src="assets/Wordibly/Web-2.png" alt="Wordibly web" loading="lazy" decoding="async" />
+                  <img src="assets/Wordibly/Web-3.png" alt="Wordibly web" loading="lazy" decoding="async" />
+                  <img src="assets/Wordibly/Web-4.png" alt="Wordibly web" loading="lazy" decoding="async" />
+                  <img src="assets/Wordibly/Web-5.png" alt="Wordibly web" loading="lazy" decoding="async" />
+                  <img src="assets/Wordibly/Web-6.png" alt="Wordibly web" loading="lazy" decoding="async" />
+                  <img src="assets/Wordibly/Web-7.png" alt="Wordibly web" loading="lazy" decoding="async" />
+                  <img src="assets/Wordibly/Product.png" alt="Wordibly product" loading="lazy" decoding="async" />
                 </div>
               </div>
             </article>
@@ -107,11 +108,11 @@
               <div class="project-media" role="region" aria-label="Project images">
                 <div class="project-media-track">
                   <video src="assets/Cotulla/1_Logo.mp4" title="Cotulla logo" autoplay muted loop playsinline></video>
-                  <img src="assets/Cotulla/2_BrandAssets.png" alt="Cotulla brand assets" />
-                  <img src="assets/Cotulla/3_BrandAssets.png" alt="Cotulla brand" />
-                  <img src="assets/Cotulla/4_BrandAssets.png" alt="Cotulla brand" />
-                  <img src="assets/Cotulla/5_Website.png" alt="Cotulla website" />
-                  <img src="assets/Cotulla/6_Website.png" alt="Cotulla website" />
+                  <img src="assets/Cotulla/2_BrandAssets.png" alt="Cotulla brand assets" loading="lazy" decoding="async" />
+                  <img src="assets/Cotulla/3_BrandAssets.png" alt="Cotulla brand" loading="lazy" decoding="async" />
+                  <img src="assets/Cotulla/4_BrandAssets.png" alt="Cotulla brand" loading="lazy" decoding="async" />
+                  <img src="assets/Cotulla/5_Website.png" alt="Cotulla website" loading="lazy" decoding="async" />
+                  <img src="assets/Cotulla/6_Website.png" alt="Cotulla website" loading="lazy" decoding="async" />
                 </div>
               </div>
             </article>
@@ -138,13 +139,13 @@
               </div>
               <div class="project-media" role="region" aria-label="Project images">
                 <div class="project-media-track">
-                  <img src="assets/Aviation.edu/1.png" alt="Aviation.edu" />
-                  <img src="assets/Aviation.edu/3.png" alt="Aviation.edu" />
-                  <img src="assets/Aviation.edu/5.png" alt="Aviation.edu" />
-                  <img src="assets/Aviation.edu/6.png" alt="Aviation.edu" />
-                  <img src="assets/Aviation.edu/Frame%202087325920.png" alt="Aviation.edu" />
-                  <img src="assets/Aviation.edu/Frame%202087325924.png" alt="Aviation.edu" />
-                  <img src="assets/Aviation.edu/IMG%20BLOCK.png" alt="Aviation.edu" />
+                  <img src="assets/Aviation.edu/1.png" alt="Aviation.edu" loading="lazy" decoding="async" />
+                  <img src="assets/Aviation.edu/3.png" alt="Aviation.edu" loading="lazy" decoding="async" />
+                  <img src="assets/Aviation.edu/5.png" alt="Aviation.edu" loading="lazy" decoding="async" />
+                  <img src="assets/Aviation.edu/6.png" alt="Aviation.edu" loading="lazy" decoding="async" />
+                  <img src="assets/Aviation.edu/Frame%202087325920.png" alt="Aviation.edu" loading="lazy" decoding="async" />
+                  <img src="assets/Aviation.edu/Frame%202087325924.png" alt="Aviation.edu" loading="lazy" decoding="async" />
+                  <img src="assets/Aviation.edu/IMG%20BLOCK.png" alt="Aviation.edu" loading="lazy" decoding="async" />
                   <video src="assets/Aviation.edu/E_20.mp4" title="Aviation.edu" autoplay muted loop playsinline></video>
                   <video src="assets/Aviation.edu/AviationEdu.mp4" title="Aviation.edu" autoplay muted loop playsinline></video>
                 </div>
@@ -173,13 +174,13 @@
               </div>
               <div class="project-media" role="region" aria-label="Project images">
                 <div class="project-media-track">
-                  <img src="assets/Somatic%20Living/1.png" alt="Somatic Living" />
-                  <img src="assets/Somatic%20Living/2.png" alt="Somatic Living" />
-                  <img src="assets/Somatic%20Living/3.png" alt="Somatic Living" />
+                  <img src="assets/Somatic%20Living/1.png" alt="Somatic Living" loading="lazy" decoding="async" />
+                  <img src="assets/Somatic%20Living/2.png" alt="Somatic Living" loading="lazy" decoding="async" />
+                  <img src="assets/Somatic%20Living/3.png" alt="Somatic Living" loading="lazy" decoding="async" />
                   <video src="assets/Somatic%20Living/4.mp4" title="Somatic Living" autoplay muted loop playsinline></video>
-                  <img src="assets/Somatic%20Living/5.png" alt="Somatic Living" />
+                  <img src="assets/Somatic%20Living/5.png" alt="Somatic Living" loading="lazy" decoding="async" />
                   <video src="assets/Somatic%20Living/7.mp4" title="Somatic Living" autoplay muted loop playsinline></video>
-                  <img src="assets/Somatic%20Living/8.png" alt="Somatic Living" />
+                  <img src="assets/Somatic%20Living/8.png" alt="Somatic Living" loading="lazy" decoding="async" />
                 </div>
               </div>
             </article>
@@ -206,17 +207,17 @@
               </div>
               <div class="project-media" role="region" aria-label="Project images">
                 <div class="project-media-track">
-                  <img src="assets/Fastly/1.png" alt="Fastly" />
-                  <img src="assets/Fastly/2.png" alt="Fastly" />
-                  <img src="assets/Fastly/3.png" alt="Fastly" />
-                  <img src="assets/Fastly/4.png" alt="Fastly" />
-                  <img src="assets/Fastly/5.png" alt="Fastly" />
-                  <img src="assets/Fastly/5.5.png" alt="Fastly" />
-                  <img src="assets/Fastly/6.png" alt="Fastly" />
-                  <img src="assets/Fastly/7.png" alt="Fastly" />
-                  <img src="assets/Fastly/8.png" alt="Fastly" />
-                  <img src="assets/Fastly/9.png" alt="Fastly" />
-                  <img src="assets/Fastly/10.png" alt="Fastly" />
+                  <img src="assets/Fastly/1.png" alt="Fastly" loading="lazy" decoding="async" />
+                  <img src="assets/Fastly/2.png" alt="Fastly" loading="lazy" decoding="async" />
+                  <img src="assets/Fastly/3.png" alt="Fastly" loading="lazy" decoding="async" />
+                  <img src="assets/Fastly/4.png" alt="Fastly" loading="lazy" decoding="async" />
+                  <img src="assets/Fastly/5.png" alt="Fastly" loading="lazy" decoding="async" />
+                  <img src="assets/Fastly/5.5.png" alt="Fastly" loading="lazy" decoding="async" />
+                  <img src="assets/Fastly/6.png" alt="Fastly" loading="lazy" decoding="async" />
+                  <img src="assets/Fastly/7.png" alt="Fastly" loading="lazy" decoding="async" />
+                  <img src="assets/Fastly/8.png" alt="Fastly" loading="lazy" decoding="async" />
+                  <img src="assets/Fastly/9.png" alt="Fastly" loading="lazy" decoding="async" />
+                  <img src="assets/Fastly/10.png" alt="Fastly" loading="lazy" decoding="async" />
                 </div>
               </div>
             </article>
@@ -243,19 +244,19 @@
               </div>
               <div class="project-media" role="region" aria-label="Project images">
                 <div class="project-media-track">
-                  <img src="assets/Bloom/1.1.png" alt="Bloom" />
-                  <img src="assets/Bloom/2.png" alt="Bloom" />
-                  <img src="assets/Bloom/3.png" alt="Bloom" />
-                  <img src="assets/Bloom/4.png" alt="Bloom" />
-                  <img src="assets/Bloom/4_Bloom_Application.png" alt="Bloom" />
+                  <img src="assets/Bloom/1.1.png" alt="Bloom" loading="lazy" decoding="async" />
+                  <img src="assets/Bloom/2.png" alt="Bloom" loading="lazy" decoding="async" />
+                  <img src="assets/Bloom/3.png" alt="Bloom" loading="lazy" decoding="async" />
+                  <img src="assets/Bloom/4.png" alt="Bloom" loading="lazy" decoding="async" />
+                  <img src="assets/Bloom/4_Bloom_Application.png" alt="Bloom" loading="lazy" decoding="async" />
                   <video src="assets/Bloom/1.mov" title="Bloom" autoplay muted loop playsinline></video>
-                  <img src="assets/Bloom/6-Bloom_3D.png" alt="Bloom" />
-                  <img src="assets/Bloom/7.png" alt="Bloom" />
-                  <img src="assets/Bloom/8.png" alt="Bloom" />
-                  <img src="assets/Bloom/9.png" alt="Bloom" />
-                  <img src="assets/Bloom/10.png" alt="Bloom" />
-                  <img src="assets/Bloom/11.png" alt="Bloom" />
-                  <img src="assets/Bloom/12.png" alt="Bloom" />
+                  <img src="assets/Bloom/6-Bloom_3D.png" alt="Bloom" loading="lazy" decoding="async" />
+                  <img src="assets/Bloom/7.png" alt="Bloom" loading="lazy" decoding="async" />
+                  <img src="assets/Bloom/8.png" alt="Bloom" loading="lazy" decoding="async" />
+                  <img src="assets/Bloom/9.png" alt="Bloom" loading="lazy" decoding="async" />
+                  <img src="assets/Bloom/10.png" alt="Bloom" loading="lazy" decoding="async" />
+                  <img src="assets/Bloom/11.png" alt="Bloom" loading="lazy" decoding="async" />
+                  <img src="assets/Bloom/12.png" alt="Bloom" loading="lazy" decoding="async" />
                 </div>
               </div>
             </article>
