--- a/info.html
+++ b/info.html
@@ -28,9 +28,9 @@
     <div class="page">
       <div class="site-header">
         <div class="site-header-inner">
-          <a href="index.html" class="brand brand-wordmark">Maj Vestal</a>
+          <a href="./index.html" class="brand brand-wordmark">Maj Vestal</a>
           <nav class="nav">
-            <a class="nav-link" href="index.html">Work</a>
+            <a class="nav-link" href="./index.html">Work</a>
             <a class="nav-link nav-active" href="info.html">Info</a>
           </nav>
         </div>
